style.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Varela Round', sans-serif;
}

table {
    text-align: left;
    position: relative;
    border-collapse: collapse; 
}

th, td {
    padding: 0.25rem;
    transition: all 0.3s;  /* Simple transition for hover effect */
    min-width: 100px;
    font-size: 16px;
}

th {
    background: #F1F1F1;
    position: sticky;
    position: -webkit-sticky;
    top: 0; /* Don't forget this, required for the stickiness */
    z-index: 1;
}

th:first-child {
    position: sticky;
    position: -webkit-sticky;
    left: 0;
    z-index: 2;
}

td:first-child { 
    position: sticky;
    position: -webkit-sticky;
    left: 0;
    z-index: 0;
    border-right: 1px solid #E1E1E1;
}

/* Cells in even rows (2,4,6...) are one color */        
tr:nth-child(even) td { background: #F1F1F1; }   

/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */        
tr:nth-child(odd) td { background: #FEFEFE; }  

tr td:hover { background: #666; color: #FFF; } 

